--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -1,3 +1,21 @@
-<p *ngFor="let tempProduct of products">
-  {{tempProduct.name}} : {{ tempProduct.unit_price | currency:'USD'}}
-</p>
+<table class="table">
+
+  <thead class="table-dark">
+    <tr>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Units in stock</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr *ngFor="let tempProduct of products">
+      <td>{{tempProduct.name}}</td>
+      <td>{{tempProduct.unit_price | currency:'USD'}}</td>
+      <td>{{tempProduct.unitsInStock}}</td>
+    </tr>
+  </tbody>
+
+
+
+</table>
