--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -2,6 +2,7 @@
 
   <thead class="table-dark">
     <tr>
+      <th></th>
       <th>Name</th>
       <th>Price</th>
       <th>Units in stock</th>
@@ -10,9 +11,12 @@
 
   <tbody>
     <tr *ngFor="let tempProduct of products">
-      <td>{{tempProduct.name}}</td>
-      <td>{{tempProduct.unit_price | currency:'USD'}}</td>
-      <td>{{tempProduct.unitsInStock}}</td>
+      <td class="align-middle">
+        <img src="{{tempProduct.imageUrl}}" height="50">
+      </td>
+      <td class="align-middle">{{tempProduct.name}}</td>
+      <td class="align-middle">{{tempProduct.unit_price | currency:'USD'}}</td>
+      <td class="align-middle">{{tempProduct.unitsInStock}}</td>
     </tr>
   </tbody>
 
