--- a/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,8 +1,9 @@
 <div class="menu-sidebar-content js-scrollbar1">
+
   <nav class="navbar-sidebar">
     <ul class="list-unstyled navbar-list">
       <li *ngFor="let tempProductCategory of productCategories">
-        <a routerLink="/category/{tempProductCategory.id}" routerLinkActive="active-link">
+        <a routerLink="/category/{{tempProductCategory.id}}" routerLinkActive="active-link">
           {{tempProductCategory.categoryName}}
         </a>
       </li>
