--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -5,11 +5,20 @@
         <!-- loop over the collection of prioducts-->
         <div *ngFor="let tempProduct of products" class="col-md-3">
           <div class="product-box">
-            <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
-            <h1>{{tempProduct.name}}</h1>
-            <div class="price">{{tempProduct.unit_price}}</div>
+            <img src="{{ tempProduct.imageUrl }}" class="img-responsive" />
+            <h1>{{ tempProduct.name }}</h1>
+            <div class="price">{{ tempProduct.unit_price }}</div>
             <a href="#" class="primary-btn">Add to cart</a>
           </div>
+        </div>
+
+        <!-- if products empty then display a message -->
+        <div
+          *ngIf="products?.length == 0"
+          class="alert alert-warning col-md-12"
+          role="alert"
+        >
+          No products found.
         </div>
       </div>
     </div>
